feat: Initialize ClearPath AR project with WebSocket server and HTTPS support
- Added package.json for project dependencies and scripts
- Implemented WebSocket server in server.js to bridge Quest 3 AR headset and iPhone haptic app
- Created start-https-server.py for serving content over HTTPS with self-signed certificates
- Configured Vercel deployment with vercel.json for static file serving and appropriate headers

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,17 @@ Thumbs.db
 *.log
 logs/
 
-# Arduino IDE
-*.ino.bak
-*.ino.orig
+# SSL Certificates (generated locally)
+*.pem
+cert.pem
+key.pem
+
+# Expo
+.expo/
+.expo-shared/
+
+# Tunnel services
+*.tunnel
 
 # WebXR/AR testing
 *.cache
